--- a/src/content/docs/zh-cn/guides/getting-started/facade/index.mdx
+++ b/src/content/docs/zh-cn/guides/getting-started/facade/index.mdx
@@ -56,4 +56,4 @@ const univerAPI = FUniver.newAPI(univer);
 univerAPI.getActiveWorkbook();
 ```
 
-你可以查看 [Facade API](/api/facade/) 来查看 Facade 的全部能力。接下来几个小节会演示一些常见的使用场景。
+你可以查看 [Facade API](/api/facade/) 来了解 Facade 的全部能力。接下来几个小节会演示一些常见的使用场景。
