--- a/src/content/docs/guides/getting-started/i18n.md
+++ b/src/content/docs/guides/getting-started/i18n.md
@@ -6,7 +6,11 @@ sidebar:
 
 Some official plugins of Univer involving UI contain two languages: Simplified Chinese and English. The default language is Simplified Chinese.
 
-To change the language, please refer to the following example:
+:::tip
+**Which plugins contain internationalization language packs? Please refer to the [Plugins](/api) document with the ![i18n](https://img.shields.io/badge/zh--CN%20%7C%20en--US-cornflowerblue?label=i18n) badge.**
+:::
+
+For changing the language, you need to refer to the following example to import the corresponding language pack as needed and assemble it into an object to pass it into the `Univer` instance:
 
 ```typescript title="main.ts"
 import { LocaleType } from '@univerjs/core';
