--- a/src/content/docs/zh-cn/guides/getting-started/i18n.md
+++ b/src/content/docs/zh-cn/guides/getting-started/i18n.md
@@ -6,7 +6,11 @@ sidebar:
 
 Univer 部分涉及 UI 的官方插件中包含了简体中文和英语两种语言，内部默认使用的是简体中文。
 
-如需更改语言，请参照以下示例进行配置：
+:::tip
+**哪些插件包含了国际化语言包？请参考 [插件](/zh-cn/api) 文档中标有 ![i18n](https://img.shields.io/badge/zh--CN%20%7C%20en--US-cornflowerblue?label=i18n) 的插件。**
+:::
+
+如需更改语言，你需要参照以下示例按需引入对应的语言包，并组装成一个对象传入 `Univer` 实例中：
 
 ```typescript title="main.ts"
 import { LocaleType } from '@univerjs/core';
