docs: reorganize facade pages

--- a/src/content/docs/guides/facade/index.mdx
+++ b/src/content/docs/guides/facade/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: Using Facade
 sidebar:
-  order: 4
+  order: 1
 ---
 
-If you prefer to use a ready-to-use spreadsheet and don't want to deal with the underlying API of Univer, or if you are more inclined towards the usage style of Luckysheet, you can utilize the Panel API provided by `@univerjs/facade`. 
+If you prefer to use a ready-to-use spreadsheet and don't want to deal with the underlying API of Univer, or if you are more inclined towards the usage style of Luckysheet, you can utilize the Facade API provided by `@univerjs/facade`. 
 
 :::note
 In fact, Uniscript also uses the same API provided by `@univerjs/facade`, so the capabilities provided by `@univerjs/facade` align with what Uniscript offers.
