--- a/src/content/docs/zh-cn/guides/facade/index.mdx
+++ b/src/content/docs/zh-cn/guides/facade/index.mdx
@@ -1,15 +1,15 @@
 ---
 title: 使用 Facade
 sidebar:
-  order: 4
+  order: 1
 ---
 
-如果你只想使用一个开箱即用的电子表格，不想使用 Univer 的底层 API，或者你更偏向于 Luckysheet 的使用方式，你可以使用 @univerjs/facade 提供的面板（**Facade**） API。
+如果你只想使用一个开箱即用的电子表格，不想使用 Univer 的底层 API，或者你更偏向于 Luckysheet 的使用方式，你可以使用 `@univerjs/facade` 提供的面板（**Facade**） API。
 
 本小节介绍 Facade 的安装和基本使用方法。
 
 :::note
-实际上，[Uniscript](/zh-cn/guides/plugins/common/uniscript/) 也使用了 @univerjs/facade 提供的这套 API，因此 @univerjs/facade 提供的能力就是 Uniscript 能够提供的能力。
+实际上，[Uniscript](/zh-cn/guides/plugins/common/uniscript/) 也使用了 @univerjs/facade 提供的这套 API，因此 `@univerjs/facade` 提供的能力就是 Uniscript 能够提供的能力。
 :::
 
 :::note[⚗️ 施工中]
