--- a/src/content/docs/zh-cn/guides/quick-start/index.mdx
+++ b/src/content/docs/zh-cn/guides/quick-start/index.mdx
@@ -1,5 +1,7 @@
 ---
 title: 快速上手
+sidebar:
+  order: 1
 ---
 
 如果你想尽快开始体验 Univer，那么你来对地方了！这个页面将带你在几分钟内从零搭建一个可以运行的 Univer 应用。
@@ -12,7 +14,7 @@ title: 快速上手
 
 你可以在线体验 Univer，无需安装任何东西。只需点击下面的链接，即可立即开始使用 Univer。
 
-import PlaygroundBtns from '../../../guides/quickstart/_components/PlaygroundBtns.astro'
+import PlaygroundBtns from '../../../guides/quick-start/_components/PlaygroundBtns.astro'
 
 <PlaygroundBtns
   items={[{
@@ -67,7 +69,7 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 恭喜你！你已经迈出了第一步，开始了解 Univer。接下来，你可以继续深入学习 Univer，这里有一些建议：
 
-- **🔰 新手入门**：如果你想学习如何从头开始手动创建一个 Univer 项目，请查看[新手入门](/zh-cn/guides/getting-started)章节。它将一步步引导你完成整个过程。
+- **🔰 安装和引入**：如果你想学习如何从头开始手动创建一个 Univer 项目，请查看[安装和引入](/zh-cn/guides/quick-start/installation)章节。它将一步步引导你完成整个过程。
 - **🏗️ 进阶使用**：如果你想进一步提升你的 Univer 技能，可以查看[进阶使用](/zh-cn/guides/advanced-use)章节。它涵盖了更多高级主题和技巧。
 - **📚 教程**：如果你想了解一些实际的例子和真实的用例，可以查看[教程](/zh-cn/guides/tutorials)章节，里面有一些实用的教程，可以帮助你学习如何使用 Univer 构建各种应用和功能。
 - **🧱 概念与架构**：如果你想深入了解 Univer 的内部工作原理，可以查看 [概念与架构](/zh-cn/guides/concepts-and-architecture/architecture/) 章节，它提供了 Univer 的架构、核心概念和设计原则的全面概述。
