--- a/src/content/docs/guides/quick-start/index.mdx
+++ b/src/content/docs/guides/quick-start/index.mdx
@@ -1,5 +1,7 @@
 ---
 title: Quickstart
+sidebar:
+  order: 1
 ---
 
 If you want to get started with Univer as quickly as possible, you've come to the right place! This page will guide you through building a working Univer app in just a few minutes.
@@ -67,7 +69,7 @@ Great job on your first steps with Univer! You've successfully created your firs
 
 Congratulations on making it this far! You're well on your way to mastering Univer. Here are some next steps to help you continue your journey:
 
-- **🔰 Getting Started**: If you want to learn how to manually set up a Univer project from scratch, check out the [Getting Started](/guides/getting-started) chapter. It will guide you through the process step by step.
+- **🔰 Installation & Usage**: If you want to learn how to manually set up a Univer project from scratch, check out the [Installation & Usage](/quick-start/installation/) chapter. It will guide you through the process step by step.
 - **🏗️ Advanced Use**: Ready to take your Univer skills to the next level? The [Advanced Use](/guides/advanced-use) chapter covers more advanced topics and techniques for working with Univer.
 - **📚 Tutorials**: Looking for practical examples and real-world use cases? Head over to the [Tutorials](/guides/tutorials) chapter, where you'll find a collection of hands-on tutorials that demonstrate how to build various applications and features with Univer.
 - **🧱 Concepts & Architecture**: Want to dive deep into the inner workings of Univer? The [Concepts & Architecture](/guides/concepts-and-architecture/architecture/) chapter provides a comprehensive overview of Univer's architecture, core concepts, and design principles.
