--- a/src/content/docs/guides/quick-start/installation.mdx
+++ b/src/content/docs/guides/quick-start/installation.mdx
@@ -1,19 +1,19 @@
 ---
-title: 安装和引入
+title: Installation & Usage
 sidebar:
-  order: 1
+  order: 2
 ---
 
-我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置，请阅读 [更多](/zh-cn/guides/quickstart/#更多) 以及 [常见问题](/zh-cn/guides/troubleshooting) 获取更多信息。
+We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/guides/quickstart#read-more) and the [Troubleshooting](/guides/troubleshooting).
 
-## 安装
+## Installation
 
-Univer 以插件的形式提供了一系列功能，除了一些产品所必需的核心插件外，你还可以根据需要选择性地引入其它插件。
+To facilitate the deployment of Univer's frontend, a variety of npm packages are utilized. You may install the requisite packages based on your specific requirements.
 
-以下示例将会带你了解哪些插件是必需的，以及如何安装它们：
+The following example will guide you through which plugins are necessary and how to install them:
 
 :::tip
-如果你正在使用 npm，请确保使用的版本为 npm@7 以上。这是因为 npm@3 ~ npm@6 并不会正确地安装 `peerDependencies`[^1]。
+If you are using npm, please ensure that you are using npm@7 or above. This is because npm@3 ~ npm@6 will not correctly install `peerDependencies`[^1].
 :::
 
 import { Tabs, TabItem } from "@astrojs/starlight/components";
@@ -21,37 +21,37 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 <Tabs>
   <TabItem label="📊 Univer Sheet">
     ```shell
-    # 使用 npm
+    # Using npm
     npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
 
-    # 使用 pnpm
+    # Using pnpm
     pnpm add @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
   <TabItem label="📝 Univer Doc">
     ```shell
-    # 使用 npm
+    # Using npm
     npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/ui
 
-    # 使用 pnpm
+    # Using pnpm
     pnpm add @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/ui
     ```
   </TabItem>
 </Tabs>
 
-如果你想在后续的开发中获得更加便捷的开发体验，我们还推荐你安装 `@univerjs/facade`：
+If you want to get a more convenient development experience in the future, we also recommend you to install `@univerjs/facade`:
 
 ```shell
-# 使用 npm
+# Using npm
 npm install @univerjs/facade
 
-# 使用 pnpm
+# Using pnpm
 pnpm add @univerjs/facade
 ```
 
-有关 `@univerjs/facade` 的更多信息，请参考 [Facade](/zh-cn/guides/getting-started/facade) 章节。
+For more information about `@univerjs/facade`, please refer to the [Facade](/guides/facade) section.
 
-## 使用
+## Usage
 
 import Sandbox from '@/components/Sandbox'
 
@@ -109,14 +109,14 @@ univer.createUniverDoc({});
 `
 
 :::tip
-样式文件的引入顺序很重要，确保你在依次引入 `@univerjs/design`、`@univerjs/ui` 的 CSS 样式后再引入其他插件的样式文件。
+The order of importing the style files is important. Make sure you import the CSS styles of `@univerjs/design` and `@univerjs/ui` before importing the CSS styles of other plugins.
 
-**哪些插件需要引入样式文件？请参考 [插件](/zh-cn/api) 文档中标有 ![CSS Included](https://img.shields.io/badge/CSS_Included-blue?logo=CSS3) 的插件。**
+**Which plugins need to import style files? Please refer to the [Plugins](/api) document with the ![CSS Included](https://img.shields.io/badge/CSS_Included-blue?logo=CSS3) badge.**
 :::
 
 <Tabs>
   <TabItem label="📊 Univer Sheet">
-    你需要在项目中引入 Univer 的样式文件，以及一些必要的插件：
+    You need to import Univer's css files and some necessary plugins in your project:
 
     ```typescript title="main.ts"
     import "@univerjs/design/lib/index.css";
@@ -141,12 +141,12 @@ univer.createUniverDoc({});
     import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
     ```
 
-    然后创建一个 Univer 实例，并注册这些插件：
+    Then create a Univer instance and register these plugins:
 
     <Sandbox client:only="react" height="720px" src="/sandbox" code={sheetCode} />
   </TabItem>
   <TabItem label="📝 Univer Doc">
-    你需要在项目中引入 Univer 的样式文件，以及一些必要的插件：
+    You need to import Univer's css files and some necessary plugins in your project:
 
     ```typescript title="main.ts"
     import "@univerjs/design/lib/index.css";
@@ -165,34 +165,36 @@ univer.createUniverDoc({});
     import { UniverDocsUIPlugin } from "@univerjs/docs-ui";
     ```
 
-    然后创建一个 Univer 实例，并注册这些插件：
+    Then create a Univer instance and register these plugins:
 
     <Sandbox client:only="react" height="720px" src="/sandbox" code={docCode} />
   </TabItem>
 </Tabs>
 
-## 入门示例：加载数据、修改数据和存储数据
+## Getting Started: Loading, modifying and storing data
 
 <Tabs>
   <TabItem label="📊 Univer Sheet">
-    在上一小节的代码中，你已经创建了一个 Univer 实例并创建了一个空的电子表格，不过大部分情况下你可能需要的是在 Univer 当中加载已有数据。这一小节将会介绍如何向 Univer 加载数据、修改数据以及如何从 Univer 中存储数据。
+    In the previous section, you have already created a Univer instance and an empty spreadsheet. However, in most cases, you will likely need to load existing data into Univer. This section will explain how to load data into Univer and retrieve data from it.
 
-    ### 加载数据
+    ### Loading Data
 
-    通过调用 `Univer` 的 `createUniverSheet` 方法，可以创建一个新的 `Workbook` 实例。方法的第一个参数是一个对象，包含了 `Workbook` 的数据，应该符合 `IWorkbookData` 接口。
+    By calling the `createUniverSheet` method of `Univer`, you can create a new `Workbook` instance. The first parameter of the method is an object containing the data of the `Workbook`, which should conform to the `IWorkbookData` interface.
 
     ```typescript
     import { IWorkbookData } from "@univerjs/core";
+
+    // ... create univer instance and load plugins
 
     const data: IWorkbookData = {};
     const workbook = univer.createUniverSheet(data);
     ```
 
-    你可以在[这里](/api/core/interfaces/IWorkbookData.html)了解 `IWorkbookData` 所支持的全部字段。
+    You can learn more about all the fields supported by `IWorkbookData` [here](/api/core/interfaces/IWorkbookData.html).
 
-    ### 修改数据
+    ### Modifying Data
 
-    `@univerjs/facade` 提供的 API 是对 `Univer` 实例的封装，因此你需要在创建了 `Univer` 实例之后，再用 `FUniver` 包裹这个实例：
+    `@univerjs/facade` provides a set of APIs for modifying data in Univer. You can use these APIs to modify the data in the `Workbook` instance.
 
     ```typescript
     import { FUniver } from "@univerjs/facade";
@@ -200,19 +202,20 @@ univer.createUniverDoc({});
     const univerAPI = FUniver.newAPI(univer);
     ```
 
-    然后你就可以通过调用 `univerAPI` 的方法来使用 Univer 了，例如获取当前激活的 sheet，并在指定的范围更新值：
+    {/* 然后你就可以通过调用 `univerAPI` 的方法来使用 Univer 了，例如获取当前激活的 sheet，并在指定的范围更新值： */}
+    Then you can use the methods of `univerAPI` to use Univer, such as getting the currently active sheet and updating values in the specified range:
 
     ```typescript
     const activeSheet = univerAPI.getActiveWorkbook().getActiveSheet();
 
-    // A1 设置数字 1
+    // Set the number 1 in A1
     const range1 = activeSheet.getRange(0, 0, 1, 1);
     range1.setValue(1);
     ```
 
-    ### 存储数据
+    ### Storing Data
 
-    通过调用当前 `Workbook` 的 `getSnapshot` 方法，可以得到 `IWorkbookData` 对象，包含了表格内部的数据。
+    By calling the `getSnapshot` method of the current `Workbook`, you can get an `IWorkbookData` object containing the data inside the sheet.
 
     ```typescript
     const savedData = univerAPI.getActiveWorkbook().getSnapshot();
