--- a/packages/community/src/content/docs/guides/introduction/index.mdx
+++ b/packages/community/src/content/docs/guides/introduction/index.mdx
@@ -4,14 +4,14 @@ sidebar:
   order: 1
 ---
 
-Univer provides a comprehensive enterprise-level solution for document and data collaboration, supporting three core document types: **spreadsheets**, **documents**, and **presentations**. Through a flexible API and plugin mechanism, developers can customize and extend personalized features on Univer to meet the specific needs of different users in various scenarios.
+Univer provides a comprehensive enterprise-level solution for document and data collaboration, supporting three core document types: **spreadsheets**, **documents**, and **slides**. Through a flexible API and plugin mechanism, developers can customize and extend personalized features on Univer to meet the specific needs of different users in various scenarios.
 
 export const features = [{
   title: '🚀 High Performance',
-  description: 'Univer uses a rendering engine and formula engine based on Canvas, which supports Web Worker, ensuring high performance and large-scale data processing.'
+  description: 'Univer uses a rendering engine based on Canvas and a formula engine that supports Web Worker, ensuring high performance on large-scale data rendering and processing.'
 }, {
   title: '🧩 Plugin-based',
-  description: 'The core functionality and capabilities of Univer are provided through plugins, allowing developers to freely combine the required functionality or extend custom plugins.'
+  description: 'The core functionality and capabilities of Univer are provided through plugins, allowing developers to freely combine the required functionality or create custom plugins to extend Univer.'
 }, {
   title: '🪄 Customizable',
   description: 'Developers can customize the appearance and interaction of Univer by importing custom themes, icons, component libraries, etc.'
@@ -29,13 +29,13 @@ export const features = [{
   description: 'Provides Discord community and GitHub Discussions to facilitate developer communication and support.'
 }, {
   title: '📈 Continuous Updates',
-  description: 'The Univer team will continue to update and maintain Univer to ensure its stability and reliability.'
+  description: 'The Univer team will continue to update and maintain Univer to ensure its rich-feature, stability and reliability.'
 }, {
   title: '💼 Enterprise Edition',
   description: 'Provides a commercial version for enterprises with specific needs, including but not limited to multi-person collaborative editing and browsing, data connectors, and Live Share for collaborative browsing.'
 }]
 
-## Key Characteristics
+## Highlights
 
 import FeatureBox from './_components/FeatureBox.astro'
 
@@ -61,7 +61,7 @@ import FeatureBox from './_components/FeatureBox.astro'
 - Cross-platform shortcut key support
 - Shortcut key panel
 
-### 📊 Spreadsheet Support
+### 📊 Spreadsheet
 
 > Univer Sheet has completed most of the development of basic features, but there are still key features that have not been fully implemented. Please follow our [Roadmap](/guides/introduction/roadmap) to stay updated on our progress.
 
@@ -70,6 +70,7 @@ import FeatureBox from './_components/FeatureBox.astro'
 import Sandbox from '@/components/Sandbox'
 
 export const code = `const univer = new Univer({
+  locale: LocaleType.en_US,
   theme: defaultTheme,
 });
 
@@ -97,32 +98,31 @@ univer.createUniverSheet({});
 
 #### Editing Operations
 
-- Create, delete, and move sheets
-- Cell Styles: Bold, Italic, Underline, Strikethrough, Font Family, Font Size, Font Color, Background Color, Border Style, Alignment, Text Rotation
-- Merge Cells: Merge and unmerge cells, merge cells in different directions
-- Row/Column Operations: Insert, delete, and move rows/columns, modify row height and column width
-- Copy/Paste: Paste values only, paste format only, paste formula only, paste column width only, paste border style only
-- Clear Content: Clear content only, clear style only, clear all
-- Cell Editing: Cell editor, rich text within cells
+- Create, delete and re-order worksheets
+- Cell styles: bold, italic, underline, strike-through, font family, font size, text color, background color, border style, text alignment, text rotation
+- Merged cells: merge and unmerge cells, merge cells in different directions
+- Row column operations: insert, delete, and move rows/columns, modify row height and column width
+- Copy & paste: paste values only, paste format only, paste formula only, paste column width only, paste border style only
+- Clear content: content only, style only, all
+- Cell editing: cell editor that support rich-format texts
 - Insert and delete cells
-- Fill Down
-- Format Painter
+- Auto fill
+- Format painter
 
 #### Viewing
 
-- Freeze Panes
-- Summary Bar
+- Freeze column and/or rows
+- Summary bar
   - Sum, Max, Min, Average, Count
 
 #### Data and Calculation
 
 - Formulas
-  - Fx Bar (formula editor)
+  - Fx bar (formula editor)
   - Formula highlighting
   - Built-in formulas
   - Formula calculation using Web Workers (optional)
-- Number Formats
-  - General, Accounting, Currency, Date, Thousands Separator
+- Number format: general, accounting, currency, date, thousands separator
 
 #### Automation
 
@@ -132,15 +132,15 @@ univer.createUniverSheet({});
 
 - Zen Editor Mode (optional)
 
-### 📝 Document Support
+### 📝 Document
 
 > Univer Doc is now in the early stages of development, most of the features are not yet available. Please follow our [Roadmap](/guides/introduction/roadmap) to stay updated on our progress.
 
 #### Editing Operations
 
-- Text Styles: Bold, Italic, Underline, Strikethrough, Font Family, Font Size, Font Color
+- Text Styles: bold, italic, underline, strike through, font family, font size, text color
 
-### 🎨 Presentation Support
+### 🎨 Slide 
 
 > Univer Slide is now in the early stages of development, and we are working hard to bring it to you as soon as possible. Stay tuned and follow our progress on [Roadmap](/guides/introduction/roadmap).
 
