--- a/packages/community/src/content/docs/guides/quick-start/index.mdx
+++ b/packages/community/src/content/docs/guides/quick-start/index.mdx
@@ -70,7 +70,7 @@ Great job on your first steps with Univer! You've successfully created your firs
 Congratulations on making it this far! You're well on your way to mastering Univer. Here are some next steps to help you continue your journey:
 
 - **🔰 Installation & Usage**: If you want to learn how to manually set up a Univer project from scratch, check out the [Installation & Usage](/quick-start/installation/) chapter. It will guide you through the process step by step.
-- **🏗️ Advanced Use**: Ready to take your Univer skills to the next level? The [Advanced Use](/guides/advanced-use) chapter covers more advanced topics and techniques for working with Univer.
+- **🏗️ Advanced Usage**: Ready to take your Univer skills to the next level? The [Advanced Usage](/guides/advanced-use) chapter covers more advanced topics and techniques for working with Univer.
 - **📚 Tutorials**: Looking for practical examples and real-world use cases? Head over to the [Tutorials](/guides/tutorials) chapter, where you'll find a collection of hands-on tutorials that demonstrate how to build various applications and features with Univer.
 - **🧱 Concepts & Architecture**: Want to dive deep into the inner workings of Univer? The [Concepts & Architecture](/guides/concepts-and-architecture/architecture/) chapter provides a comprehensive overview of Univer's architecture, core concepts, and design principles.
 - **🪄 Customizing Univer**: Interested in extending and customizing Univer to fit your specific needs? The [Customizing Univer](/guides/customization) chapter is your go-to resource for learning how to create custom plugins, themes, and extensions.
