docs: update docs

--- a/src/content/docs/guides/introduction/index.mdx
+++ b/src/content/docs/guides/introduction/index.mdx
@@ -144,6 +144,20 @@ univer.createUniverSheet({});
 
 > Univer Slide is now in the early stages of development, and we are working hard to bring it to you as soon as possible. Stay tuned and follow our progress on [Roadmap](/guides/introduction/roadmap).
 
+## Environment Support
+
+Univer's compilation target is Chrome 70, but this does not mean that Univer can fully support all browsers. We will do our best to ensure that Univer runs smoothly in the following browsers:
+
+| [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/edge/edge_48x48.png" alt="IE / Edge" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>IE / Edge | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/firefox/firefox_48x48.png" alt="Firefox" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Firefox | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/chrome/chrome_48x48.png" alt="Chrome" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Chrome | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/safari/safari_48x48.png" alt="Safari" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Safari | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/electron/electron_48x48.png" alt="Electron" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Electron |
+| --------- | --------- | --------- | --------- | --------- |
+| Edge| last 2 versions| last 2 versions| last 2 versions| last 2 versions
+
+If you encounter compatibility issues, please try to solve them with the corresponding polyfill. If you still cannot solve the problem, please [submit an issue](https://github.com/dream-num/univer/issues/new/choose).
+
+## Typescript
+
+Univer provides a built-in type definition file, so developers can enjoy a better development experience when using Univer.
+
 ## What's Next
 
 If you can't wait to experience Univer, please refer to the [Quick Start](/guides/quickstart).
@@ -168,12 +182,17 @@ The core code of Univer, available on [GitHub](https://github.com/dream-num/univ
 
 This documentation, available on [GitHub](https://github.com/dream-num/docs), is open source under the CC-BY-NC-SA 4.0 license. Organizations and individuals are free to use it, but commercial use is not allowed.
 
-## Enterprise Edition
+## Univer Pro
 
-Univer also offers a commercial version that provides the following out-of-the-box features:
+Univer Pro is a plug-and-play solution designed to meet a range of complex business needs. It adopts the interfaces, components, and event mechanisms provided by the open-source version of Univer and carefully encapsulates them.
+
+While Univer Pro is designed to address specific business scenarios, it may not cover all of your business needs. We recommend that you conduct a detailed assessment of your specific business needs before exploring the possibilities of Univer Pro. If necessary, you can also use the powerful features provided by the open-source version of Univer to customize and extend the specific features you need.
+
+Univer Pro currently provides the following features:
 
 - 👨‍💻 Collaborative editing and browsing
 - 🛜 Data connectors
 - 🎚️ Live Share for collaborative browsing
+- 📤 Import / Export
 
-To learn more about our commercial edition or request a trial, please visit [here](/enterprises).
+To learn more about our commercial edition or request a trial, please visit [here](/enterprises). 
