--- a/src/content/docs/zh-cn/guides/advanced-use/release.mdx
+++ b/src/content/docs/zh-cn/guides/advanced-use/release.mdx
@@ -1,5 +1,7 @@
 ---
 title: 其他发布版本
+sidebar:
+  order: 2
 ---
 
 > 体验最新的功能和特性，同时帮助我们测试和改进 Univer。
@@ -37,7 +39,7 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 @univerjs:registry=https://verdaccio.univer.work/
 ```
 
-这个配置将 `@univerjs` 作用域指向了 Univer 的夜间版本仓库，该仓库托管在 https://verdaccio.univer.work/。这是我们提供的一个专门用于测试和开发的私有 npm 仓库。
+这个配置将 `@univerjs` 作用域指向了 Univer 的夜间版本仓库，该仓库托管在 [https://verdaccio.univer.work/](https://verdaccio.univer.work/)。这是我们提供的一个专门用于测试和开发的私有 npm 仓库。
 
 然后，你可以使用以下命令安装 Univer 包的夜间版本：
 
