--- a/src/content/docs/guides/advanced-use/release.mdx
+++ b/src/content/docs/guides/advanced-use/release.mdx
@@ -1,5 +1,7 @@
 ---
 title: Other Releases
+sidebar:
+  order: 2
 ---
 
 > Experience the latest features and functionality while helping us test and improve Univer.
@@ -37,7 +39,7 @@ First, you need to create a `.npmrc` file in the root directory of your project,
 @univerjs:registry=https://verdaccio.univer.work/
 ```
 
-This configuration points the @univerjs scope to Univer's nightly version repository, which is hosted at https://verdaccio.univer.work. This is a private npm repository we provide specifically for testing and development purposes.
+This configuration points the @univerjs scope to Univer's nightly version repository, which is hosted at  [https://verdaccio.univer.work/](https://verdaccio.univer.work/). This is a private npm repository we provide specifically for testing and development purposes.
 
 Then, you can install the nightly version of a Univer package using the following command:
 
