--- a/src/content/docs/zh-cn/guides/introduction/index.mdx
+++ b/src/content/docs/zh-cn/guides/introduction/index.mdx
@@ -147,6 +147,20 @@ univer.createUniverSheet({});
 
 > Univer Slide 目前处于早期开发阶段，我们正在努力将其尽快带给您。请关注我们的[路线图](/zh-cn/guides/introduction/roadmap)以了解最新进展。
 
+## 兼容环境
+
+Univer 的编译目标是 Chrome 70，但这并不意味着 Univer 能够完全支持所有浏览器。我们会尽力确保 Univer 在以下浏览器中能够正常运行：
+
+| [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/edge/edge_48x48.png" alt="IE / Edge" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>IE / Edge | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/firefox/firefox_48x48.png" alt="Firefox" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Firefox | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/chrome/chrome_48x48.png" alt="Chrome" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Chrome | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/safari/safari_48x48.png" alt="Safari" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Safari | [<img src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/electron/electron_48x48.png" alt="Electron" width="24px" height="24px" />](http://godban.github.io/browsers-support-badges/)<br/>Electron |
+| --------- | --------- | --------- | --------- | --------- |
+| Edge| last 2 versions| last 2 versions| last 2 versions| last 2 versions
+
+如果遇到无法兼容的情况，请先借助对应的 polyfill 来解决，如果仍然无法解决，请[提交 issue](https://github.com/dream-num/univer/issues/new/choose)。
+
+## Typescript
+
+Univer 是使用 Typescript 编写的，因此我们提供了完整的类型定义文件，以便开发者在使用 Univer 时能够获得更好的开发体验。
+
 ## 下一步
 
 如果你已经迫不及待地想要体验 univer，请参考[快速上手](/zh-cn/guides/quickstart)。
@@ -175,12 +189,17 @@ univer.createUniverSheet({});
 
 [本文档](https://github.com/dream-num/univer-docs)在 CC-BY-NC-SA 4.0 协议下开源，任何组织和个人都可以免费使用，但不允许用于商业目的。
 
-## 商业版本
+## Univer Pro
 
-Univer 同时提供商业版本，提供以下开箱即用的功能：
+Univer Pro 是针对一系列复杂业务需求设计的即插即用解决方案。它采用了 Univer 开源版本所公开的接口、组件和事件机制，并对它们进行了精心封装。
+
+尽管 Univer Pro 旨在应对特定的业务场景，但它可能不会覆盖您所有的业务需求。我们建议您在探索 Univer Pro 的可能性之前，先对您的具体业务需求进行详细评估。如有必要，您也可以利用 Univer 开源版本提供的强大功能来定制和扩展所需的特定功能。
+
+Univer Pro 目前提供了以下功能：
 
 - 👨‍💻 多人协同编辑和协同浏览
 - 🛜 数据连接器
 - 🎚️ 协同浏览（Live Share）
+- 📤 导入 / 导出
 
 想进一步了解我们的商业版或者申请试用，请移步[这里](/zh-cn/enterprises)。
