docs: add zen-editor doc

--- a/src/content/docs/guides/facade/index.mdx
+++ b/src/content/docs/guides/facade/index.mdx
@@ -37,7 +37,11 @@ Note that Facade and the underlying API are not mutually exclusive. You can use 
 Install via your favorite package manager:
 
 ```shell
-pnpm install @univerjs/facade
+# Using npm
+npm install @univerjs/facade
+
+# Using pnpm
+pnpm add @univerjs/facade
 ```
 
 ## Usage
