--- a/src/content/docs/guides/quick-start/i18n.md
+++ b/src/content/docs/guides/quick-start/i18n.md
@@ -18,7 +18,7 @@ import { enUS as UniverDesignEnUS } from '@univerjs/design';
 import { enUS as UniverDocsUIEnUS } from '@univerjs/docs-ui';
 import { enUS as UniverSheetsEnUS } from '@univerjs/sheets';
 import { enUS as UniverSheetsUIEnUS } from '@univerjs/sheets-ui';
-import { enUS as UniverUiEnUS } from '@univerjs/ui';
+import { enUS as UniverUIEnUS } from '@univerjs/ui';
 
 const univer = new Univer({
   theme: defaultTheme,
@@ -28,7 +28,7 @@ const univer = new Univer({
       ...UniverSheetsEnUS,
       ...UniverDocsUIEnUS,
       ...UniverSheetsUIEnUS,
-      ...UniverUiEnUS,
+      ...UniverUIEnUS,
       ...UniverDesignEnUS,
     },
   },
