--- a/src/content/docs/zh-cn/guides/facade/index.mdx
+++ b/src/content/docs/zh-cn/guides/facade/index.mdx
@@ -34,10 +34,14 @@ sidebar:
 
 ## 安装
 
-使用你的 npm 包管理器安装：
+使用你的包管理器安装：
 
 ```shell
-pnpm install @univerjs/facade
+# 使用 npm
+npm install @univerjs/facade
+
+# 使用 pnpm
+pnpm add @univerjs/facade
 ```
 
 ## 使用
